# artificial_life_project

./: .gitignore  CMakeLists.txt  CoordsWeightType.h  GreedyHeuristic.cpp  GreedyHeuristic.h  Instance.cpp  Instance.h  LocalSearch.cpp  LocalSearch.h  RandomGenerator.cpp  RandomGenerator.h  RandomSolutions.cpp  RandomSolutions.h  StringFunctions.cpp  StringFunctions.h  TabuSearch.cpp  TabuSearch.h  main.cpp  smietnik.txt  utils.cpp  utils.h
